--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -142,7 +142,12 @@
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AccountPacket.h" />
+    <ClInclude Include="ChatroomPacket.h" />
+    <ClInclude Include="MessagePacket.h" />
     <ClInclude Include="Packet.h" />
+    <ClInclude Include="Packets.h" />
+    <ClInclude Include="ResponsePacket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
