--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="ResponsePacket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NetworkFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
