--- a/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
+++ b/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CreateAccount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="CreateAccount.ui">
@@ -60,5 +63,10 @@
     <QtUic Include="ChatScreen.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="CreateAccount.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
