--- a/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj
+++ b/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj
@@ -100,12 +100,14 @@
     <QtUic Include="CreateAccount.ui" />
     <QtUic Include="LoginScreen.ui" />
     <QtMoc Include="LoginScreen.h" />
+    <ClCompile Include="ChatScreen.cpp" />
     <ClCompile Include="CreateAccount.cpp" />
     <ClCompile Include="LoginScreen.cpp" />
     <ClCompile Include="main.cpp" />
     <None Include="LiteChatGUI.ico" />
     <ResourceCompile Include="LiteChatGUI.rc" />
     <QtMoc Include="CreateAccount.h" />
+    <QtMoc Include="ChatScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">Create</PrecompiledHeader>
