--- a/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
+++ b/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="CreateAccount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ChatScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="CreateAccount.ui">
@@ -66,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="CreateAccount.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="ChatScreen.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
