--- a/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
+++ b/LiteChatGUI/LiteChatGUI/LiteChatGUI.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="ChatScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="windowInit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="CreateAccount.ui">
@@ -74,5 +77,11 @@
     <QtMoc Include="ChatScreen.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="windowInit.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
