--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="ServerFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Send.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
