--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="ServerFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ServerSend.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
